partman-auto (87) UNRELEASED; urgency=low

  * Add support for writing sizes as a number plus a percentage of RAM, e.g.
    "2000+50%". This is useful when doing automatic partitioning with the
    expectation of creating swap files.

 -- Colin Watson <cjwatson@debian.org>  Tue, 16 Jun 2009 13:07:21 +0100

partman-auto (86) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Only ensure that there is at least one primary partition after
      autopartitioning on partition tables that use extended partitions.

  [ Updated translations ]
  * Bengali (bn.po) by Md. Rezwan Shahid
  * Estonian (et.po) by Mattias Põldaru
  * Slovak (sk.po) by Ivan Masár

 -- Christian Perrier <bubulle@debian.org>  Fri, 12 Jun 2009 07:03:33 +0200

partman-auto (85) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Add ext4 support.
    - Add support for $default_filesystem as the partition type in a recipe,
      and $default_filesystem{ } as an internal specifier. These are
      equivalent to FS and filesystem{ FS } respectively, where FS is the
      value of partman/default_filesystem. Requires partman-base 129.
    - Exit straight away if a called script is killed by a signal.

  [ Frans Pop ]
  * Remove myself as uploader.

  [ Martin Michlmayr ]
  * Remove recipes for the old arm port.
  * Use the same recipes on Marvell Kirkwood as on Orion.

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide
  * Galician (gl.po) by Marce Villarino
  * Hindi (hi.po) by Kumar Appaiah
  * Italian (it.po) by Milo Casagrande
  * Kazakh (kk.po) by daur88
  * Malayalam (ml.po) by Praveen Arimbrathodiyil
  * Slovak (sk.po) by Ivan Masár
  * Thai (th.po) by Theppitak Karoonboonyanan
  * Tagalog (tl.po) by Eric Pareja

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 03 Apr 2009 15:58:56 +0200

partman-auto (84) unstable; urgency=low

  * recipes.sh: correct error handling for non-existant recipe description.