@@ -3,6 +3,10 @@ partman-auto (87) UNRELEASED; urgency=low
   * Add support for writing sizes as a number plus a percentage of RAM, e.g.
     "2000+50%". This is useful when doing automatic partitioning with the
     expectation of creating swap files.
+  * If we're creating primary partitions and find that we've reached the end
+    of the recipe, use "full" rather than "beginning" as the place passed to
+    NEW_PARTITION, thereby avoiding rounding problems and matching the
+    process for creating logical partitions (closes: #516347, LP: #287571).
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 16 Jun 2009 13:07:21 +0100
 
